Formulário de Entradas [3626860]

--- a/coi-management-web/src/main/webapp/index.html
+++ b/coi-management-web/src/main/webapp/index.html
@@ -191,7 +191,7 @@
 	<script type="text/template" id="entrada_template">
 <header>Entrada</header>
 <input type="text" name="data" class="coi-validation-required coi-format-date" data-label="Data:"/>
-<input type="text" name="cliente" class="coi-validation-required" data-label="Cliente:"/>
+<input type="text" class="coi-validation-required" data-label="Cliente:"/>
 <footer>
 	<button class="coi-action-cancel">Cancelar</button>
 	<button class="coi-action-confirm">Confirmar</button>
