Importação de pessoas via arquivo [4051786]

--- a/coi-management-web/src/main/webapp/index.html
+++ b/coi-management-web/src/main/webapp/index.html
@@ -113,6 +113,9 @@
 	<script type="text/template" id="pessoas_template">
 <header>Pessoas</header>
 <div class="coi-paginator">
+	<input type="text" class="coi-input-search"/>
+	<button class="coi-action-search">Pesquisar</button>
+	<button class="coi-action-clear">Limpar</button>
 	<button class="coi-action-prev">Anterior</button>
 	<button class="coi-action-prox">Próxima</button>
 </div>
